# aoc-scaffold

./: Cargo.toml  LICENSE.txt  readme.md
src/: lib.rs  runner.rs
src/common/: mod.rs
template/days/: day04.rs
