[package]
name = "aoc"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "runner"
path = "./src/runner.rs"

[lib]
name = "aoc"
path = "./src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
